Fixed layout issue on animal detail pages

--- a/src/pages/animalDetail/animalDetail.css
+++ b/src/pages/animalDetail/animalDetail.css
@@ -1,3 +1,15 @@
 .animalImage{
     border-radius: 10px;
+
+}
+
+.imageContainer{
+    height: 400px;
+    width: 300px;
+}
+.imageContainer img {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    object-fit: cover;
 }
